adding some css, do the rest and some jscript tomorrow

--- a/css/modify.css
+++ b/css/modify.css
@@ -9,7 +9,69 @@
     margin-top: 20px;
     margin-right: 10px;
     padding: 10px;
+    text-align: center;
 }
+
+.modify-form .input-field{
+    margin: 20px auto;
+    width: 50%;
+    min-width: 250px;
+    display: flex;
+    flex-grow: initial;
+    height: 60px;
+    padding: 10px;
+    background-color: white;
+}
+.modify-form .input-field label{
+    flex: 1;
+    line-height: 40px;
+}
+
+.modify-form .input-field select{
+    flex: 1;
+    border: none;
+    border-bottom: 1px solid black;
+    font-size: 1.5em;
+    text-align: center;
+}
+
+
+.modify-form .modify-form-btns{
+    display: flex;
+    justify-content: space-around;
+    text-align: center;
+    margin-top: 50px;
+    height: 40px;
+    font-size: 16px;
+}
+
+.modify-form .modify-form-btns a{
+    text-decoration: none;
+}
+
+.modify-form .decline-btn{
+    background-color: green;
+    color: white;
+    border: 1px solid white;
+    border-radius: 20px;
+    width: 150px;
+    min-width: 150px;
+    line-height: 38px;
+    margin-left: 50px;
+
+}
+
+.modify-form .accept-btn{
+    background-color: red;
+    color: white;
+    border: 1px solid white;
+    border-radius: 20px;
+    width: 150px;
+    min-width: 150px;
+    line-height: 38px;
+    margin-right: 50px;
+}
+
 
 .suggestion{
     flex: 1;
@@ -46,4 +108,8 @@
     height: 50px;
     text-align: center;
     line-height: 50px;
+}
+
+.suggestion-card .card-btn:hover{
+    background-color: rgba(255, 255, 255, 0.5);
 }
