--- a/css/style.css
+++ b/css/style.css
@@ -60,6 +60,12 @@ html {
     border-radius: 10px;
     text-decoration: none;
     line-height: 36px;
+}
+
+.menu-bar a:hover{
+    background-color: rgba(0, 96, 185, 0.448);
+    border: 2px solid #3693EA;
+    line-height: 32px;
 
 }
 
@@ -111,6 +117,12 @@ html {
     margin: 0;
     padding: 0 10px;
     font-weight: 500;
+    line-height: 50px;
+}
+
+.header-bar .header-btn:hover{
+    /* background-color:#5a5a5a; */
+    color: #3693EA;
 }
 
 .header-bar .account-btn{
@@ -154,6 +166,10 @@ html {
     text-decoration: none;
     line-height: 40px;
     font-weight: 700;
+    color: black;
+}
+.footer a:hover{
+    color: #3693EA;
 }
 
 .footer a:active{
